Fix mobile search text overlapping
Bug: T343397

--- a/resources/mobile.startup/search/SearchOverlay.less
+++ b/resources/mobile.startup/search/SearchOverlay.less
@@ -98,7 +98,7 @@
 	}
 
 	li.page-summary {
-		height: @thumbWidth;
+		min-height: @thumbWidth;
 
 		h3 {
 			margin: 0;
